# hyray

./: README.md  notes.txt  pyproject.toml  tasks.py
.github/workflows/: ci-cpu.yml  ci-gpu.yml  ci_cpu.yml
arrayhybrid/: array.py
doc/: api_gen.py
hyray/: __init__.py  array.py  curay.py
test/: test_unit.py
test/unit/: test_cu_array.py  test_curay.py  test_hyray.py
